<resources>
    <string name="app_name">easyParking</string>

    <!--首页tab-->
    <string name="tab_my">我的信息</string>
    <string name="tab_main">首頁</string>

    <!--myInfo view-->
    <string name="myInfo_title">我的</string>
    <string name="myInfo_infoRatio">简历完成度 </string>
    <string name="myInfo_parking_history">停车记录</string>
    <string name="myInfo_message">我的消息</string>
    <string name="myInfo_collection">我的收藏</string>
    <string name="myInfo_feedback">意见反馈</string>
    <string name="myInfo_setting">系统设置</string>
    <string name="myInfo_quit">退出当前账号</string>
    <string name="toast_not_support">您的手机不支持此功能</string>

    <!-- account preference -->
    <string name="account_about">关于</string>
    <string name="security_title">账号安全保护</string>
    <string name="security_summary">您的面条账户已受安全账户机制保护</string>
    <string name="privacy_title">隐私权</string>
    <string name="privacy_summary">面条账户不会同步您的隐私信息</string>
    <string name="account_type">com.njupt.sniper</string>
</resources>
